--- a/index.html
+++ b/index.html
@@ -1,149 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Truhlářství Jiří Šrubař</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
-    />
-  </head>
-
-  <body>
-    <header>
-      <!-- nav + hlavní vizuál = logo, velký napdpis, popisek, velký banner -->
-      <div class="pozadi-container">
-        <img
-          src="assets/img/header fotka background.webp"
-          alt="Truhlářství Jiří Šrubař - pozadí"
-          class="pozadi"
-        />
-        <div class="obdelnik"></div>
-      </div>
-
-      <div class="overlay">
-        <nav>
-          <!-- odkazy na sekce: Galerie a Kontakt -->
-          <img
-            src="assets/img/logo.png"
-            alt="Logo Truhlářství Jiří Šrubař"
-            class="logo"
-          />
-          <ul>
-            <li><a href="/photos.html" class="nav-link">GALERIE</a></li>
-            <li><a href="#kontakt" class="nav-link">KONTAKT</a></li>
-          </ul>
-        </nav>
-
-        <div class="ctverec"></div>
-
-        <div class="hero">
-          <div class="hero-text">
-            <h1>
-              Truhlářství Studénka <br />
-              <span>Jiří Šrubař</span>
-            </h1>
-            <p>
-              Výroba kuchyňských linek, vestavěného nábytku a prodej <br />
-              domácích spotřebičů s více než 20letou zkušeností.
-            </p>
-          </div>
-          <img
-            src="assets/img/kuchyn.webp"
-            alt="Popředí Truhlářství Jiří Šrubař"
-            class="popredi"
-          />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jiří Šrubař</title>
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/fancybox.css">
+</head>
+<body>
+    <div class="page">
+        <div class="landing-main">
+            <div class="background"></div>
+            <nav>
+                <a href="/"><div class="branding">
+                    <img src="/assets/img/logo.png" alt="logo" />
+                </div></a>
+                <ul class="nav-item-container">
+                    <!--<a href="" class="nav-link"><li class="nav-item">HOME</li></a>-->
+                    <a href="" class="nav-link"><li class="nav-item">GALERIE</li></a>
+                    <a href="" class="nav-link"><li class="nav-item">KONTAKT</li></a>
+                </ul>
+            </nav>
         </div>
-      </div>
-    </header>
-
-    <main>
-      <section class="benefits-section">
-        <div class="header-container">
-          <span class="decorative-line"></span>
-          <h2>Zkušenosti, kvalita<br />a komplexní přístup</h2>
-        </div>
-
-        <div class="benefits-grid">
-          <div class="benefit-item">
-            <div class="benefit-title">
-              <img src="assets/icons/quality.svg" alt="" />
-              <h3>Nakupuji, používám a dodávám kvalitu.</h3>
-            </div>
-            <div class="divider"></div>
-            <p>
-              Pracuji s kvalitními materiály, mj. od českých dodavatelů.
-              Nepoužívám materiály s nástřiky imitací. I proto je životnost
-              našich kuchyní v řádech několika desítek let.
-            </p>
-          </div>
-
-          <div class="benefit-item">
-            <div class="benefit-title">
-              <img src="assets/icons/tools.svg" alt="" />
-              <h3>Kuchyně s co nejvyšší praktičností.</h3>
-            </div>
-            <div class="divider"></div>
-            <p>
-              Po desítkách let zkušeností a z denního pohybu v kuchyni víme, co
-              kam umístit a jaké materiály použít tak, aby kuchyně sloužila co
-              nejlépe a nejdéle.
-            </p>
-          </div>
-
-          <div class="benefit-item">
-            <div class="benefit-title">
-              <img src="assets/icons/bookmark.svg" alt="" />
-              <h3>Přizpůsobení se vašim potřebám.</h3>
-            </div>
-            <div class="divider"></div>
-            <p>
-              Zákazníkovi jsem schopen splnit nejatypičtější požadavky, včetně
-              výšky pracovní desky.<br /><br />
-              K maximálnímu sladění kuchyně s interiérem nabízím také možnost
-              dalšího vestavěného nábytku ve stejném materiálu, jako např.
-              jídelní stoly, obývací stěny apod.
-            </p>
-          </div>
-
-          <div class="benefit-item">
-            <div class="benefit-title">
-              <img src="assets/icons/1price tag_pricing.svg" alt="" />
-              <h3>Spotřebiče za internetové ceny.</h3>
-            </div>
-            <div class="divider"></div>
-            <p>
-              Díky dlouholetým vztahům s dodavateli dokážeme cenově konkurovat i
-              internetovým obchodům.<br /><br />
-              Samozřejmostí je také odborná montáž spotřebičů.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section class="assets/img/photos">
-        <!-- GALERIE: mřížka obrázků + případně lightbox -->
-        <div class="ctverec-bilozlaty"></div>
-        <div class="gallery" data-limit="8"></div>
-        <a href="assets/img/photos.html" class="gallery-button">ZOBRAZIT VÍCE</a>
-      </section>
-
-      <section id="projekty">
-        <!-- PROJEKTY: karty s detailem realizací -->
-      </section>
-
-      <section id="kontakt">
-        <!-- KONTAKT: textové údaje + mapa -->
-      </section>
-    </main>
-
-    <footer>
-      <!-- PATIČKA: autorská práva -->
-    </footer>
-
-    <script src="assets/js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
-  </body>
+    </div>
+    <script src="/assets/js/fancybox/fancybox.umd.js" defer></script>
+    <script src="/assets/js/fancybox-custom/fancybox-loader.js" defer></script>
+</body>
 </html>
