Zlepseni responzivity navbaru

--- a/index.html
+++ b/index.html
@@ -20,9 +20,27 @@
                     <a href="" class="nav-link"><li class="nav-item">GALERIE</li></a>
                     <a href="" class="nav-link"><li class="nav-item">KONTAKT</li></a>
                 </ul>
-            </nav>
+                <div class="hamburger">&#9776;</div>
+            </nav>     
+
+             <!-- FULLSCREEN mobilní menu mimo nav -->
+  <div class="mobile-menu" id="mobileMenu">
+    <div class="menu-header">
+      <div class="menu-logo">
+        <img src="/assets/img/logo.png" alt="logo" />
+      </div>
+      <div class="close-btn" id="closeMenu">&times;</div>
+    </div>
+    <ul class="mobile-nav">
+      <li><a href="/">HLAVNÍ STRÁNKA</a></li>
+      <li><a href="/galerie">GALERIE</a></li>
+      <li><a href="/kontakt">KONTAKT</a></li>
+    </ul>
+  </div>
         </div>
     </div>
+    
+    <script src="/assets/js/hamburger-menu/menu.js"></script>
     <script src="/assets/js/fancybox/fancybox.umd.js" defer></script>
     <script src="/assets/js/fancybox-custom/fancybox-loader.js" defer></script>
 </body>
