Infinite slider and some little changes

--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@
         </div>
     </div>
 
-  <div class="assist-container">
-    <div class="assist-exact">
+  <div class="logo-slider-container">
     <h2>Prodej domácích spotřebičů a vybavení kuchyní</h2>
-      <img src="assets/img/assist photos .png"/>
-      </div>
-      <p>a dalších</p>
+  <div class="logo-slider">
+    <img src="assets/img/assist photos.png" alt="Loga značek" />
+    <img src="assets/img/assist photos.png" alt="Loga značek kopie" />
   </div>
+</div>
+
 
     <div class="contacts" id="contact">
      <div class="kontakt">
@@ -145,10 +146,9 @@
 </div>
 
    
-  <footer><h3>Copyright 2025 @ Maxim Krynyckyj</h3></footer>
+  <footer><h3>Copyright 2025 @ Truhlářství Jiří Šrubař</h3></footer>
 
     <script src="/assets/js/hamburger-menu/menu.js"></script>
-    <script src="/assets/js/assist-slider/assist-slider.js" defer></script>
     <script src="/assets/js/slider/slider.js" defer></script>
     <script src="/assets/js/fancybox/fancybox.umd.js" defer></script>
     <script src="/assets/js/fancybox-custom/fancybox-loader.js" defer></script>
