Add slider functionality footer copyright

--- a/index.html
+++ b/index.html
@@ -93,13 +93,53 @@
         </div>
     </div>
     </div>
-        
+            <!-- Galerie-->
     <div class="gallery-container">
        <div class="square2"></div>
       <div class="gallery" data-limit="8"></div>
         <a href="/gallery.html" class="gallery-button">ZOBRAZIT VÍCE</a>
         </div>
     </div>
+
+            <!-- Slider -->
+    <div class="slider-container">
+        <h2>Kuchyně a nábytek různých druhů</h2>
+        <div class="slider-flex">
+         <p class="slider-text">Jsem schopen se přizpůsobit požadavkům na nejaktuálnější trendy a pracovat i s návrhy designerů a architektů.
+Zároveň mám však bohaté zkušenosti s dalšími světovými styly kuchyní.
+Kromě kuchyňských linek dodávám také další kusy nábytku, od koupelen po kanceláře.</p>
+<div class="slider-track">
+    <div class="slider-item">
+      <img src="/assets/img/Slider/slide1.webp" alt="Moderní kuchyň" />
+      <p>Současné moderní kuchyně</p>
+    </div>
+    <div class="slider-item">
+      <img src="/assets/img/Slider/slide2.webp" alt="Netradiční prostor" />
+      <p>Netradiční prostory</p>
+    </div>
+    <div class="slider-item">
+      <img src="/assets/img/Slider/slide3.webp" alt="Rustikální kuchyň" />
+      <p>Rustikální kuchyně</p>
+    </div>
+     <div class="slider-item">
+      <img src="/assets/img/Slider/slide4.webp" alt="Vestavěná skříň" />
+      <p>Vestavěné skříně</p>
+    </div>
+     <div class="slider-item">
+      <img src="/assets/img/Slider/slide4.webp" alt="Koupelový nábytek" />
+      <p>Koupelnový nábytek</p>
+    </div>
+     <div class="slider-item">
+      <img src="/assets/img/Slider/slide5.webp" alt="Kancelářský nábytek" />
+      <p>Kancelářský nábytek</p>
+    </div>
+     <div class="slider-item">
+      <img src="/assets/img/Slider/slide6.webp" alt="Ostatní nábytek" />
+      <p>Ostatní nábytek</p>
+    </div>
+   </div>
+  </div>
+</div>
 
   <div class="logo-slider-container">
     <h2>Prodej domácích spotřebičů a vybavení kuchyní</h2>
