--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@
 </div>
 
    
-  <footer><h3>Copyright 2025 @ Maxim Krynyckyj</h3></footer>
+  <footer><h3>Copyright 2025 @ Truhlářství Jiří Šrubař</h3></footer>
 
    <script src="/assets/js/hamburger-menu/menu.js"></script>
     <script src="/assets/js/assist-slider/assist-slider.js" defer></script>
