--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jiří Šrubař</title>
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/fancybox.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="page">
@@ -18,7 +19,7 @@
                 <ul class="nav-item-container">
                     <!--<a href="" class="nav-link"><li class="nav-item">HOME</li></a>-->
                     <a href="/gallery.html" class="nav-link"><li class="nav-item">GALERIE</li></a>
-                    <a href="#contact" class="nav-link"><li class="nav-item">KONTAKT</li></a>
+                    <a href="#kontakt" class="nav-link"><li class="nav-item">KONTAKT</li></a>
                 </ul>
                 <div class="hamburger" id="hamburger">&#9776;</div>
             </nav>     
@@ -50,7 +51,10 @@
         </div>
              <!--- ZKUŠENOSTI Grid-->
     <div class="zkusenosti-div">
+    <div class="line-header">
+      <div class="line"></div>
     <h2 class="zkusenosti-title">Zkušenosti, kvalita<br>a komplexní přístup</h2>
+      </div>
     <div class="grid-container">
         <div class="grid-item">
             <div class="grid-item-content">
@@ -103,11 +107,16 @@
 
             <!-- Slider -->
     <div class="slider-container">
+      <div class="line-header">
+        <div class="line"></div>
         <h2>Kuchyně a nábytek různých druhů</h2>
+      </div>
         <div class="slider-flex">
-         <p class="slider-text">Jsem schopen se přizpůsobit požadavkům na nejaktuálnější trendy a pracovat i s návrhy designerů a architektů.
-Zároveň mám však bohaté zkušenosti s dalšími světovými styly kuchyní.
-Kromě kuchyňských linek dodávám také další kusy nábytku, od koupelen po kanceláře.</p>
+           <div class="slider-text">
+         <p>Jsem schopen se přizpůsobit požadavkům na nejaktuálnější trendy a pracovat i s návrhy designerů a architektů.</p>
+         <p>Zároveň mám však bohaté zkušenosti s dalšími světovými styly kuchyní.</p>
+         <p>Kromě kuchyňských linek dodávám také další kusy nábytku, od koupelen po kanceláře</p>
+        </div>
 <div class="slider-track">
     <div class="slider-item">
       <img src="/assets/img/Slider/slide1.webp" alt="Moderní kuchyň" />
@@ -142,51 +151,54 @@ Kromě kuchyňských linek dodávám také další kusy nábytku, od koupelen po
 </div>
 
   <div class="logo-slider-container">
+  <div class="line-header">
+    <div class="line"></div>
     <h2>Prodej domácích spotřebičů a vybavení kuchyní</h2>
+  </div>
   <div class="logo-slider">
     <img src="assets/img/assist photos.png" alt="Loga značek" />
     <img src="assets/img/assist photos.png" alt="Loga značek kopie" />
   </div>
+    <p>a dalších</p>
 </div>
 
-
-    <div class="contacts" id="contact">
-     <div class="kontakt">
-      <h2>Kontakt</h2>
-         <div class="kontakt-flex">
-        <p>JIŘÍ ŠRUBAŘ<br>ŠÁRKA ŠRUBAŘOVÁ</p>
-        <p>
-            <span class="icon">📞</span> 777 849 081<br>
-            <span class="icon">📞</span> 777 308 069
-        </p>
-         </div>
-          <div class="kontakt-flex">
-        <p>
-            Po - Pá: 8:00 - 16:30<br>
-            Družstevní 227<br>
-            742 13 Studénka
-        </p>
-        <p>
-            IČ: 41051106<br>
-            DIČ: CZ6705240454<br>
-            číslo b. účtu: 123456789
-        </p>
-         </div>
+<!--Kontakt/Footer-->
+  <footer>
+<div class="kontakt" id="kontakt">
+  <div class="line-header"> 
+    <div class="line"></div>
+    <h2>Kontakt</h2>
+  </div>
+  <div class="kontakt-info">
+    <div class="kontakt-first">
+      <p>Jiří Šrubař</p>
+      <p>Šárka Šrubařová</p>
+      <p>Po - Pá: 8:00 - 16:30 <br>
+        Družstevní 227 <br>
+        742 13 Studénka
+      </p>
     </div>
-    <div class="map">
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.123456789!2d18.0123456789!3d49.123456789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47123456789abcdef%3A0x123456789abcdef!2sStud%C3%A9nka!5e0!3m2!1sen!2scz!4v1234567890" 
-            width="100%" 
-            height="450" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy">
-        </iframe>
+    <div class="kontakt-second">
+      <p><a href="tel:+420777849081">777 849 081</a></p>
+      <p><a href="tel:+420777308069">777 308 069</a></p>
+      <p>IČ: 41051106 <br>
+        DIČ: CZ6705240454 <br>
+        číslo b. ú: 123456789
+      </p>
     </div>
+    <div class="kontakt-map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d41269.444433800614!2d18.0788211!3d49.7232207!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e8c336a814d1%3A0xf594eff9b24967a7!2zRHJ1xb5zdGV2bsOtIDIyNywgNzQyIDEzIFN0dWTDqW5rYSAz!5e0!3m2!1scs!2scz!4v1750066042840!5m2!1scs!2scz"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </div>
 </div>
-
-   
-  <footer><h3>Copyright 2025 @ Truhlářství Jiří Šrubař</h3></footer>
+      
+    <h3>Copyright 2025 @ Truhlářství Jiří Šrubař</h3>
+  </footer>
 
     <script src="/assets/js/hamburger-menu/menu.js"></script>
     <script src="/assets/js/slider/slider.js" defer></script>
