testing data-limit

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
             </nav>     
      </div>
 
-        <div class="gallery" data-limit="all"></div>
+        <div class="gallery" data-limit="91"></div>
 
             <div class="contacts" id="contact">
      <div class="kontakt">
