logo slider effect

--- a/index.html
+++ b/index.html
@@ -155,10 +155,12 @@
     <div class="line"></div>
     <h2>Prodej domácích spotřebičů a vybavení kuchyní</h2>
   </div>
+    <div class="logo-slider-effect">
   <div class="logo-slider">
     <img src="assets/img/assist photos.png" alt="Loga značek" />
     <img src="assets/img/assist photos.png" alt="Loga značek kopie" />
   </div>
+    </div>
     <p>a dalších</p>
 </div>
 
