--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                  </div>
             </div>
     </div>
+    
              <!-- FULLSCREEN mobilní menu mimo nav -->
   <div class="mobile-menu" id="mobileMenu">
     <div class="menu-header">
@@ -49,6 +50,7 @@
     </ul>
   </div>
         </div>
+
              <!--- ZKUŠENOSTI Grid-->
     <div class="zkusenosti-div">
     <div class="line-header">
@@ -97,7 +99,8 @@
         </div>
     </div>
     </div>
-            <!-- Galerie-->
+
+<!-- Galerie-->
     <div class="gallery-container">
        <div class="square2"></div>
       <div class="gallery" data-limit="8"></div>
@@ -105,7 +108,7 @@
         </div>
     </div>
 
-            <!-- Slider -->
+<!-- Slider -->
     <div class="slider-container">
       <div class="line-header">
         <div class="line"></div>
@@ -150,6 +153,7 @@
   </div>
 </div>
 
+<!--Logo slider-->
   <div class="logo-slider-container">
   <div class="line-header">
     <div class="line"></div>
