Refactor content for clarity and readability in the service description

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                  </div>
             </div>
     </div>
-    
+
              <!-- FULLSCREEN mobilní menu mimo nav -->
   <div class="mobile-menu" id="mobileMenu">
     <div class="menu-header">
@@ -84,7 +84,8 @@
                     <img src="assets/icons/bookmark.svg" alt="Přizpůsobení">
                     <h3>Přizpůsobení se vašim potřebám.</h3>
                 </div>
-                <p>Zákazníkovi jsem schopen splnit nejrůzličnější požadavky, včetně výšky pracovní desky. K maximálnímu užití kuchyně s interiérem nabízím také možnost údržby vestavěného nábytku se stejném materiálu, jako např. jídelní stoly, obývací stěny apod.</p>
+                <p>Zákazníkovi jsem schopen splnit nejrůzličnější požadavky, včetně výšky pracovní desky.</p>
+                <p>K maximálnímu užití kuchyně s interiérem nabízím také možnost údržby vestavěného nábytku se stejném materiálu, jako např. jídelní stoly, obývací stěny apod.</p>
             </div>
         </div>
         
@@ -94,7 +95,8 @@
                     <img src="assets/icons/pricetag.svg" alt="Ceny">
                     <h3>Spotřebiče za internetové ceny.</h3>
                 </div>
-                <p>Díky dlouholetým vztahům s dodavateli dokážeme cenově konkurovat i internetovým obchodům. Samozřejmostí je také odborná montáž spotřebičů.</p>
+                <p>Díky dlouholetým vztahům s dodavateli dokážeme cenově konkurovat i internetovým obchodům.</p>
+                <p>Samozřejmostí je také odborná montáž spotřebičů.</p>
             </div>
         </div>
     </div>
