Refactor mobile menu to use half-screen overlay with blur effect

--- a/index.html
+++ b/index.html
@@ -35,21 +35,8 @@
             </div>
     </div>
 
-             <!-- FULLSCREEN mobilní menu mimo nav -->
-  <div class="mobile-menu" id="mobileMenu">
-    <div class="menu-header">
-      <div class="close-btn" id="closeMenu">&times;</div>
-    </div>
-    <ul class="mobile-nav">
-      <div class="menu-logo">
-        <img src="/assets/img/logo-mobile.png" alt="logo" />
-      </div>
-      <a href="" class="nav-link-mobile"><li class="nav-item-mobile">HLAVNÍ STRÁNKA</li></a>
-      <a href="" class="nav-link-mobile"><li class="nav-item-mobile">GALERIE</li></a>
-      <a href="" class="nav-link-mobile"><li class="nav-item-mobile">KONTAKT</li></a>
-    </ul>
-  </div>
-        </div>
+
+    
 
              <!--- ZKUŠENOSTI Grid-->
     <div class="zkusenosti-div">
@@ -207,6 +194,17 @@
       
     <h3>Copyright 2025 @ Truhlářství Jiří Šrubař</h3>
   </footer>
+             <!-- FULLSCREEN mobilní menu mimo nav -->
+<div class="mobile-menu">
+  <div class="menu-header">
+    <button class="close-btn">&times;</button>
+  </div>
+  <ul class="mobile-nav">
+    <li><a href="/gallery.html" class="nav-link-mobile">Galerie</a></li>
+    <li><a href="#kontakt" class="nav-link-mobile">Kontakt</a></li>
+  </ul>
+</div>
+<div class="blur-overlay"></div>
 
     <script src="/assets/js/hamburger-menu/menu.js"></script>
     <script src="/assets/js/slider/slider.js" defer></script>
