Add home navigation link to mobile menu and improve mobile menu styling

--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@
     <button class="close-btn">&times;</button>
   </div>
   <ul class="mobile-nav">
-    <li><a href="/gallery.html" class="nav-link-mobile">Galerie</a></li>
-    <li><a href="#kontakt" class="nav-link-mobile">Kontakt</a></li>
+    <li><a href="/index.html" class="nav-link-mobile">HLAVNÍ STRÁNKA</a></li>
+    <li><a href="/gallery.html" class="nav-link-mobile">GALERIE</a></li>
+    <li><a href="#kontakt" class="nav-link-mobile">KONTAKT</a></li>
   </ul>
 </div>
 <div class="blur-overlay"></div>
