made navigation menu on mobile

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     <button class="close-btn">&times;</button>
   </div>
   <ul class="mobile-nav">
+     <img src="assets/img/logo-mobile.png" alt="logo-mobile" />
     <li><a href="/index.html" class="nav-link-mobile">HLAVNÍ STRÁNKA</a></li>
     <li><a href="/gallery.html" class="nav-link-mobile">GALERIE</a></li>
     <li><a href="#kontakt" class="nav-link-mobile">KONTAKT</a></li>
