Update text content

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <img src="assets/icons/quality.svg" alt="Kvalita">
                     <h3>Nakupuji, používám a dodávám kvalitu.</h3>
                 </div>
-                <p>Pracuji s kvalitními materiály, mj. od českých dodavatelů. Nepoužívám materiály z máslého nmlací. I proto je životnost našich kuchyní v řádech několika desítek let.</p>
+                <p>Pracuji s kvalitními materiály, mj. od českých dodavatelů. Nepoužívám materiály s nástřiky imitací. I proto je životnost našich kuchyň v řádech několika desítek let.</p>
             </div>
         </div>
 
@@ -61,7 +61,7 @@
                     <img src="assets/icons/tools.svg" alt="Praktičnost">
                     <h3>Kuchyně s co nejvyšší praktičností.</h3>
                 </div>
-                <p>Po desítkách let zkušeností a denního pohybu v kuchyni vím, co kam umístit a jaké materiály použít tak, aby kuchyně sloužila co nejlépe a nejdéle.</p>
+                <p>Po desítkách let zkušeností a z denního pohybu v kuchyni víme, co kam umístit a jaké materiály použít tak, aby kuchyně sloužila co nejlépe a nejdéle.</p>
             </div>
         </div>
 
@@ -71,8 +71,8 @@
                     <img src="assets/icons/bookmark.svg" alt="Přizpůsobení">
                     <h3>Přizpůsobení se vašim potřebám.</h3>
                 </div>
-                <p>Zákazníkovi jsem schopen splnit nejrůzličnější požadavky, včetně výšky pracovní desky.</p>
-                <p>K maximálnímu užití kuchyně s interiérem nabízím také možnost údržby vestavěného nábytku se stejném materiálu, jako např. jídelní stoly, obývací stěny apod.</p>
+                <p>Zákazníkovi jsem schopen splnit nejatypičtější požadavky, včetně výšky pracovní desky.</p>
+                <p>K maximálnímu slazení kuchyně s interiérem nabízím také možnost dalšího vestavěného nábytku ve stejném materiálu, jako např. jídelní stoly, obývací stěny apod.</p>
             </div>
         </div>
         
