--- a/gallery.html
+++ b/gallery.html
@@ -1,72 +1,85 @@
  <!DOCTYPE html>
- <html lang="en">
- <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galerie - Jiří Šrubař</title>
-       <link rel="stylesheet" href="/assets/css/main.css">
+    <title>Jiří Šrubař - Galerie</title>
+    <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/fancybox.css">
- </head>
- <body>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
     
  <div class="gallery-main">
-            <div class="galeriis"></div>
-            <nav>
-                <a href="/index.html"><div class="branding">
+            <div class="galery-background"></div>
+             <nav>
+                <a href="/"><div class="branding">
                     <img src="/assets/img/logo.png" alt="logo" />
                 </div></a>
                 <ul class="nav-item-container">
-                    <!--<a href="" class="nav-link"><li class="nav-item">HOME</li></a>-->
                     <a href="/gallery.html" class="nav-link"><li class="nav-item">GALERIE</li></a>
-                    <a href="#contact" class="nav-link"><li class="nav-item">KONTAKT</li></a>
+                    <a href="#kontakt" class="nav-link"><li class="nav-item">KONTAKT</li></a>
                 </ul>
                 <div class="hamburger" id="hamburger">&#9776;</div>
-            </nav>     
+            </nav>   
      </div>
 
-        <div class="gallery" data-limit="91"></div>
-
-            <div class="contacts" id="contact">
-     <div class="kontakt">
-      <h2>Kontakt</h2>
-         <div class="kontakt-flex">
-        <p>JIŘÍ ŠRUBAŘ<br>ŠÁRKA ŠRUBAŘOVÁ</p>
-        <p>
-            <span class="icon">📞</span> 777 849 081<br>
-            <span class="icon">📞</span> 777 308 069
-        </p>
-         </div>
-          <div class="kontakt-flex">
-        <p>
-            Po - Pá: 8:00 - 16:30<br>
-            Družstevní 227<br>
-            742 13 Studénka
-        </p>
-        <p>
-            IČ: 41051106<br>
-            DIČ: CZ6705240454<br>
-            číslo b. účtu: 123456789
-        </p>
-         </div>
-    </div>
-    <div class="map">
-        <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2563.123456789!2d18.0123456789!3d49.123456789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47123456789abcdef%3A0x123456789abcdef!2sStud%C3%A9nka!5e0!3m2!1sen!2scz!4v1234567890" 
-            width="100%" 
-            height="450" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy">
-        </iframe>
-    </div>
-</div>
+        <div class="gallery" data-limit="all"></div>
 
    
-  <footer><h3>Copyright 2025 @ Truhlářství Jiří Šrubař</h3></footer>
+ <!--Kontakt/Footer-->
+  <footer>
+<div class="kontakt" id="kontakt">
+  <div class="line-header"> 
+    <div class="line"></div>
+    <h2>Kontakt</h2>
+  </div>
+  <div class="kontakt-info">
+    <div class="kontakt-first">
+      <p>Jiří Šrubař</p>
+      <p>Šárka Šrubařová</p>
+      <p>Po - Pá: 8:00 - 16:30 <br>
+        Družstevní 227 <br>
+        742 13 Studénka
+      </p>
+    </div>
+    <div class="kontakt-second">
+      <p><a href="tel:+420777849081">777 849 081</a></p>
+      <p><a href="tel:+420777308069">777 308 069</a></p>
+      <p>IČ: 41051106 <br>
+        DIČ: CZ6705240454 <br>
+        číslo b. ú: 123456789
+      </p>
+    </div>
+    <div class="kontakt-map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d41269.444433800614!2d18.0788211!3d49.7232207!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e8c336a814d1%3A0xf594eff9b24967a7!2zRHJ1xb5zdGV2bsOtIDIyNywgNzQyIDEzIFN0dWTDqW5rYSAz!5e0!3m2!1scs!2scz!4v1750066042840!5m2!1scs!2scz"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </div>
+</div>
+      
+    <h3>Copyright 2025 @ Truhlářství Jiří Šrubař</h3>
+  </footer>
 
-   <script src="/assets/js/hamburger-menu/menu.js"></script>
-    <script src="/assets/js/assist-slider/assist-slider.js" defer></script>
-    <script src="/assets/js/slider/slider.js" defer></script>
+               <!-- FULLSCREEN mobilní menu mimo nav -->
+<div class="mobile-menu">
+  <div class="menu-header">
+    <button class="close-btn">&times;</button>
+  </div>
+  <ul class="mobile-nav">
+     <img src="assets/img/logo-mobile.png" alt="logo-mobile" />
+    <li><a href="/index.html" class="nav-link-mobile">HLAVNÍ STRÁNKA</a></li>
+    <li><a href="/gallery.html" class="nav-link-mobile">GALERIE</a></li>
+    <li><a href="#kontakt" class="nav-link-mobile">KONTAKT</a></li>
+  </ul>
+</div>
+<div class="blur-overlay"></div>
+
+    <script src="/assets/js/hamburger-menu/menu.js"></script>
     <script src="/assets/js/fancybox/fancybox.umd.js" defer></script>
     <script src="/assets/js/fancybox-custom/fancybox-loader.js" defer></script>
  </body>
