gallery html atribute update

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
             </nav>   
      </div>
 
-        <div class="gallery" data-limit="all"></div>
+        <div class="gallery" data-limit="totalImages"></div>
 
    
  <!--Kontakt/Footer-->
