improved footer and fully responsive on every mobile device

--- a/index.html
+++ b/index.html
@@ -159,39 +159,54 @@
 
 <!--Kontakt/Footer-->
   <footer>
-<div class="kontakt" id="kontakt">
-  <div class="line-header"> 
-    <div class="line"></div>
-    <h2>Kontakt</h2>
+    <div class="contact-container">
+      <div class="contact">
+        <div class="contact-content">
+            <div class="contact-info">
+
+              <div class="line-header">
+                <div class="line"></div>
+                <h2>Kontakt</h2>
+              </div>
+
+              <div class="contact-info-cols">
+  <div class="col">
+    <div>JIŘÍ ŠRUBAŘ</div>
+    <div>ŠÁRKA ŠRUBAŘOVÁ</div>
   </div>
-  <div class="kontakt-info">
-    <div class="kontakt-first">
-      <p>Jiří Šrubař</p>
-      <p>Šárka Šrubařová</p>
-      <p>Po - Pá: 8:00 - 16:30 <br>
-        Družstevní 227 <br>
-        742 13 Studénka
-      </p>
+  <div class="col">
+    <div>
+      <strong>777 849 081</strong>
     </div>
-    <div class="kontakt-second">
-      <p><a href="tel:+420777849081">777 849 081</a></p>
-      <p><a href="tel:+420777308069">777 308 069</a></p>
-      <p>IČ: 41051106 <br>
-        DIČ: CZ6705240454 <br>
-        číslo b. ú: 123456789
-      </p>
-    </div>
-    <div class="kontakt-map">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d41269.444433800614!2d18.0788211!3d49.7232207!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e8c336a814d1%3A0xf594eff9b24967a7!2zRHJ1xb5zdGV2bsOtIDIyNywgNzQyIDEzIFN0dWTDqW5rYSAz!5e0!3m2!1scs!2scz!4v1750066042840!5m2!1scs!2scz"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+    <div>
+      <strong>777 308 069</strong>
     </div>
   </div>
 </div>
-      
+<div class="contact-info-cols-second">
+  <div class="col">
+    <div><strong>Po - Pá: 8:00 - 16:30</strong></div>
+    <div>Družstevní 227</div>
+    <div>742 13 Studénka</div>
+  </div>
+  <div class="col">
+    <div>IČ: 41051106</div>
+    <div>DIČ: CZ6705240454</div>
+    <div>číslo b. ú: 123456789</div>
+  </div>
+</div>
+            </div>
+        </div>
+        <div class="contact-placeholder"></div>
+        <div class="contact-map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d41269.444433800614!2d18.0788211!3d49.7232207!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4713e8c336a814d1%3A0xf594eff9b24967a7!2zRHJ1xb5zdGV2bsOtIDIyNywgNzQyIDEzIFN0dWTDqW5rYSAz!5e0!3m2!1scs!2scz!4v1750066042840!5m2!1scs!2scz"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+    </div>
     <h3>Copyright 2025 @ Truhlářství Jiří Šrubař</h3>
   </footer>
              <!-- FULLSCREEN mobilní menu mimo nav -->
