--- a/gallery.html
+++ b/gallery.html
@@ -25,10 +25,10 @@
      </div>
 
         <div class="gallery" data-limit="totalImages"></div>
+<button onclick="topFunction()" id="myBtn" class="gallery-button" title="Jdi nahoru">ZPĚT NAHORU</button>
 
-   
 <!--Kontakt/Footer-->
-  <footer>
+  <footer id="kontakt">
     <div class="contact-container">
       <div class="contact">
         <div class="contact-content">
