--- a/gallery.html
+++ b/gallery.html
@@ -96,5 +96,6 @@
     <script src="/assets/js/hamburger-menu/menu.js"></script>
     <script src="/assets/js/fancybox/fancybox.umd.js" defer></script>
     <script src="/assets/js/fancybox-custom/fancybox-loader.js" defer></script>
+    <script src="/assets/js/scroll-to-the-top/scroll-button.js"></script>
  </body>
 </html>
