Added slider functionality and styling

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
          <p>Zároveň mám však bohaté zkušenosti s dalšími světovými styly kuchyní.</p>
          <p>Kromě kuchyňských linek dodávám také další kusy nábytku, od koupelen po kanceláře</p>
         </div>
-<div class="slider-track">
+<div class="slider-wrapper">
+  <div class="slider-track">
     <div class="slider-item">
       <img src="/assets/img/Slider/slide1.webp" alt="Moderní kuchyň" />
       <p>Současné moderní kuchyně</p>
@@ -139,7 +140,9 @@
       <p>Ostatní nábytek</p>
     </div>
    </div>
+    <button class="slider-arrow"><img src="assets/icons/arrow-icon.png"/></button>
   </div>
+ </div>
 </div>
 
 <!--Logo slider-->
