Add id attribute to footer

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </div>
 
 <!--Kontakt/Footer-->
-  <footer>
+  <footer id="kontakt">
     <div class="contact-container">
       <div class="contact">
         <div class="contact-content">
