Update meta tags and title for improved SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jiří Šrubař</title>
+    <meta name="description" content="Zakázková výroba kuchyní, vestavěného nábytku a prodej spotřebičů. 20+ let zkušeností. Kvalita, design i funkčnost na míru. Truhlářství Jiří Šrubař, Studénka." />
+    <meta name="keywords" content="truhlářství Studénka, kuchyně na míru, vestavěný nábytek, Jiří Šrubař, výroba nábytku, spotřebiče, kvalitní kuchyně" />
+    <meta name="author" content="Jiří Šrubař" />
+     <title>Truhlářství Jiří Šrubař</title>
+     <meta property="og:type" content="website" />
+<meta property="og:title" content="Truhlářství Jiří Šrubař – Kuchyně a nábytek na míru" />
+<meta property="og:description" content="Výroba kuchyní, vestavěného nábytku a prodej domácích spotřebičů. Preciznost, kvalita a individuální přístup." />
+   
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/fancybox.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
