adjusting mobile nav

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
     </div>
 
 <!-- Galerie-->
+ <div class="gallery-wrapper">
     <div class="gallery-container">
-       <div class="square2"></div>
       <div class="gallery" data-limit="8"></div>
         <a href="/gallery.html" class="gallery-button">ZOBRAZIT VÍCE</a>
-        </div>
     </div>
-
+      <div class="square2"></div>
+ </div>
 <!-- Slider -->
     <div class="slider-container">
       <div class="line-header">
