Enhance gallery layout, update design of text and improve SEO

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,6 @@
 <body>
     
  <div class="gallery-main">
-            <div class="galery-background"></div>
              <nav>
                 <a href="/"><div class="branding">
                     <img src="/assets/img/logo.png" alt="logo" />
@@ -21,7 +20,9 @@
                     <a href="#kontakt" class="nav-link"><li class="nav-item">KONTAKT</li></a>
                 </ul>
                 <div class="hamburger" id="hamburger">&#9776;</div>
-            </nav>   
+            </nav>
+              <div class="gallery-background-left"></div>
+              <div class="gallery-background-right"></div>
      </div>
 
         <div class="gallery" data-limit="totalImages"></div>
