--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Jiří Šrubař" />
      <title>Truhlářství Jiří Šrubař</title>
      <meta property="og:type" content="website" />
-<meta property="og:title" content="Truhlářství Jiří Šrubař – Kuchyně a nábytek na míru" />
-<meta property="og:description" content="Výroba kuchyní, vestavěného nábytku a prodej domácích spotřebičů. Preciznost, kvalita a individuální přístup." />
+  <meta property="og:title" content="Truhlářství Jiří Šrubař - Studénka | Kuchyně a nábytek" />
+  <meta property="og:description" content="Výroba kuchyňských linek, vestavěného nábytku a prodej domácích spotřebičů s více než 20letou zkušeností. S využitím kvalitních materiálů a maximální praktičností." />
    
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/fancybox.css">
@@ -189,7 +189,7 @@
 </div>
 <div class="contact-info-cols-second">
   <div class="col">
-    <div><strong>Po - Pá: 8:00 - 16:30</strong></div>
+    <div><span class="from-to">Po - Pá: 8:00 - 16:30</span></div>
     <div>Družstevní 227</div>
     <div>742 13 Studénka</div>
   </div>
