Update contact section layout and improve accessibility in gallery and index pages

--- a/gallery.html
+++ b/gallery.html
@@ -33,30 +33,24 @@
     <div class="contact-container">
       <div class="contact">
         <div class="contact-content">
-            <div class="contact-info">
-
-              <div class="line-header">
+           <div class="line-header">
                 <div class="line"></div>
                 <h2>Kontakt</h2>
               </div>
-
+            <div class="contact-info">
               <div class="contact-info-cols">
   <div class="col">
-    <div>JIŘÍ ŠRUBAŘ</div>
-    <div>ŠÁRKA ŠRUBAŘOVÁ</div>
+    <div class="name">JIŘÍ ŠRUBAŘ</div>
+    <div class="name">ŠÁRKA ŠRUBAŘOVÁ</div>
   </div>
   <div class="col">
-    <div>
-      <strong>777 849 081</strong>
-    </div>
-    <div>
-      <strong>777 308 069</strong>
-    </div>
+    <div><img src="assets/icons/phone-icon-footer.png" alt="Telefon"><strong>777 849 081</strong></div>
+    <div><img src="assets/icons/phone-icon-footer.png" alt="Telefon"><strong>777 308 069</strong></div>
   </div>
 </div>
 <div class="contact-info-cols-second">
   <div class="col">
-    <div><strong>Po - Pá: 8:00 - 16:30</strong></div>
+    <div><span class="from-to">Po - Pá: 8:00 - 16:30</span></div>
     <div>Družstevní 227</div>
     <div>742 13 Studénka</div>
   </div>
