--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="grid-item">
             <div class="grid-item-content">
                 <div class="grid-item-header">
-                    <img src="assets/icons/pricetag.svg" alt="Ceny">
+                    <img src="assets/icons/pricetag.svg" alt="Skvělé Ceny">
                     <h3>Spotřebiče za internetové ceny.</h3>
                 </div>
                 <p>Díky dlouholetým vztahům s dodavateli dokážeme cenově konkurovat i internetovým obchodům.</p>
