--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
             <div class="background"></div>
             <nav>
                 <a href="/"><div class="branding">
-                    <img src="/assets/img/logo.png" alt="logo" />
+                    <img src="/assets/img/logo-desktop.svg" alt="logo" />
                 </div></a>
                 <ul class="nav-item-container">
-                    <!--<a href="" class="nav-link"><li class="nav-item">HOME</li></a>-->
                     <a href="/gallery.html" class="nav-link"><li class="nav-item">GALERIE</li></a>
                     <a href="#kontakt" class="nav-link"><li class="nav-item">KONTAKT</li></a>
                 </ul>
@@ -218,7 +217,7 @@
     <button class="close-btn">&times;</button>
   </div>
   <ul class="mobile-nav">
-     <img src="assets/img/logo-mobile.png" alt="logo-mobile" />
+     <img src="assets/img/logo-mobile.svg" alt="logo-mobile" />
     <li><a href="/index.html" class="nav-link-mobile">HLAVNÍ STRÁNKA</a></li>
     <li><a href="/gallery.html" class="nav-link-mobile">GALERIE</a></li>
     <li><a href="#kontakt" class="nav-link-mobile">KONTAKT</a></li>
