Update gallery layout

--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
  <div class="gallery-main">
              <nav>
                 <a href="/"><div class="branding">
-                    <img src="/assets/img/logo.png" alt="logo" />
+                    <img src="/assets/img/logo-desktop.svg" alt="Jiří Šrubař logo-desktop" />
                 </div></a>
                 <ul class="nav-item-container">
                     <a href="/gallery.html" class="nav-link"><li class="nav-item">GALERIE</li></a>
@@ -44,8 +44,8 @@
     <div class="name">ŠÁRKA ŠRUBAŘOVÁ</div>
   </div>
   <div class="col">
-    <div><img src="assets/icons/phone-icon-footer.png" alt="Telefon"><strong>777 849 081</strong></div>
-    <div><img src="assets/icons/phone-icon-footer.png" alt="Telefon"><strong>777 308 069</strong></div>
+    <div><img src="assets/icons/phone-icon-footer.png" alt="Telefon-ikonka"><strong>777 849 081</strong></div>
+    <div><img src="assets/icons/phone-icon-footer.png" alt="Telefon-ikonka"><strong>777 308 069</strong></div>
   </div>
 </div>
 <div class="contact-info-cols-second">
@@ -80,7 +80,7 @@
     <button class="close-btn">&times;</button>
   </div>
   <ul class="mobile-nav">
-     <img src="assets/img/logo-mobile.png" alt="logo-mobile" />
+     <img src="assets/img/logo-mobile.svg" alt="Jiří Šrubař logo-mobile" />
     <li><a href="/index.html" class="nav-link-mobile">HLAVNÍ STRÁNKA</a></li>
     <li><a href="/gallery.html" class="nav-link-mobile">GALERIE</a></li>
     <li><a href="#kontakt" class="nav-link-mobile">KONTAKT</a></li>
