--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="layout-grid">
     <div class="page">
+      <header>
         <div class="landing-main">
             <div class="background"></div>
             <nav>
@@ -39,10 +41,10 @@
                     <img src="/assets/img/header.webp" alt="Jiří Šrubař" />
                  </div>
             </div>
-    </div>
+        </div>
+      </header>
 
-
-    
+    <main>
              <!--- ZKUŠENOSTI Grid-->
     <div class="zkusenosti-div">
     <div class="line-header">
@@ -164,6 +166,7 @@
     </div>
     <p>a dalších</p>
 </div>
+</main>
 
 <!--Kontakt/Footer-->
   <footer id="kontakt">
@@ -222,12 +225,13 @@
     <li><a href="/gallery.html" class="nav-link-mobile">GALERIE</a></li>
     <li><a href="#kontakt" class="nav-link-mobile">KONTAKT</a></li>
   </ul>
-</div>
-<div class="blur-overlay"></div>
+ </div>
+  <div class="blur-overlay"></div>
 
     <script src="/assets/js/hamburger-menu/menu.js"></script>
     <script src="/assets/js/slider/slider.js" defer></script>
     <script src="/assets/js/fancybox/fancybox.umd.js" defer></script>
     <script src="/assets/js/fancybox-custom/fancybox-loader.js" defer></script>
-</body>
+</div>
+  </body>
 </html> 
